--- a/resize-test/Makefile
+++ b/resize-test/Makefile
@@ -1,9 +1,26 @@
-TARGET = resize-test
+TARGET ?= resize-test
+CC ?= cc
+PKG_CONFIG ?= pkg-config
 
-SDL3 = $(shell pkg-config --cflags --libs sdl3)
-#CFLAGS = -Wall -Wextra -Werror
+SDL3_CFLAGS := $(shell $(PKG_CONFIG) --cflags sdl3 2>/dev/null)
+SDL3_LIBS := $(shell $(PKG_CONFIG) --libs sdl3 2>/dev/null)
+HAVE_SDL3 := $(strip $(SDL3_CFLAGS)$(SDL3_LIBS))
 
+CFLAGS ?= -Wall -Wextra -Werror
+
+.PHONY: all test clean
+
+ifeq ($(HAVE_SDL3),)
+all test:
+	@echo "skip $@: missing sdl3 development package"
+else
 all: $(TARGET)
 
+test: $(TARGET)
+
 $(TARGET): resize.c
-	cc -o $@ $< $(SDL3) $(CFLAGS)
+	$(CC) $(CFLAGS) $(SDL3_CFLAGS) -o $@ $< $(SDL3_LIBS)
+endif
+
+clean:
+	rm -f $(TARGET)
